--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Requirements for this application to work 
-
+# Requirements for this application
 streamlit>=1.28.0
 pandas>=2.0.0
 altair>=5.0.0
-plotly
+plotly>=5.0.0
